client/k8s/ingress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: dart-heroes
spec:
  selector:
    app: dart-heroes
    role: Frontend
  ports:
    - port: 80
      targetPort: 8080
