client/k8s/ingress/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web-ingress
  namespace: dart-heroes
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: $HOSTNAME
    http:
      paths:
      - path: /
        backend:
          serviceName: web-service
          servicePort: 80
